# sidecar-lite

./: Cargo.toml  README.md
.cargo/: config.toml
.github/buildomat/jobs/: build-and-test.sh
p4/: core.p4  headers.p4  parser.p4  sidecar-lite.p4  softnpu.p4
scadm/: Cargo.toml  README.md
scadm/src/: main.rs
softnpu/: Cargo.toml  build.rs
softnpu/src/: lib.rs  test.rs
