[workspace]
members = [
    "softnpu",
    "scadm",
]
resolver = "2"

[workspace.dependencies]
#p4rs = { git = "https://github.com/oxidecomputer/p4", branch = "main" }
#p4-macro = { git = "https://github.com/oxidecomputer/p4", branch = "main" }
#p4-test = { package = "tests", git = "https://github.com/oxidecomputer/p4", branch = "main" }

p4rs = {     path = "/Users/ry/src/p4/lang/p4rs" }
p4-macro = { path = "/Users/ry/src/p4/lang/p4-macro" }
p4-test = {  path = "/Users/ry/src/p4/test", package = "tests" }

usdt = { git = "https://github.com/oxidecomputer/usdt" }

base64 = { version = "0.13" }
clap = { version = "4.2.5", features = ["derive", "unstable-styles"] }
anstyle = "1.0.0"
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
errno = "0.2"
num = { version = "0.4.0", features = ["num-bigint"] }
macaddr = { git = "https://github.com/luqmana/rust-macaddr", branch = "leading-zeros", version = "1.0.1" }
bitvec = "1.0"
colored = "2.0"
anyhow = "1"
pnet = "0.31"
pnet_macros = "0.31"
pnet_macros_support = "0.31"
