[workspace]
members = [
    "softnpu",
    "scadm",
]
resolver = "2"

[workspace.dependencies]
p4rs = { git = "https://github.com/oxidecomputer/p4", branch = "main" }
p4-macro = { git = "https://github.com/oxidecomputer/p4", branch = "main" }
p4-test = { package = "tests", git = "https://github.com/oxidecomputer/p4", branch = "main" }
usdt = { git = "https://github.com/oxidecomputer/usdt" }

base64 = { version = "0.22" }
clap = { version = "4.5.49", features = ["derive", "unstable-styles"] }
anstyle = "1.0.11"
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
errno = "0.3"
num = { version = "0.4.3", features = ["num-bigint"] }
macaddr = { git = "https://github.com/luqmana/rust-macaddr", branch = "leading-zeros", version = "1.0.1" }
bitvec = "1.0"
colored = "3.0"
anyhow = "1"
pnet = "0.35"
pnet_macros = "0.35"
pnet_macros_support = "0.35"
