[package]
name = "scadm"
version = "0.1.0"
edition = "2021"

[dependencies]
p4rs = { git = "https://github.com/oxidecomputer/p4", branch = "main" }
base64 = { version = "0.13" }
clap = { version = "4.2.5", features = ["derive", "unstable-styles"] }
anstyle = "1.0.0"
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
errno = "0.2"
num = { version = "0.4.0", features = ["num-bigint"] }
macaddr = "1.0.1"

[dependencies.softnpu]
git = "https://github.com/oxidecomputer/softnpu"
branch = "main"
