[package]
name = "scadm"
version = "0.1.0"
edition = "2021"

[dependencies]
p4rs.workspace = true
base64.workspace = true
clap.workspace = true
anstyle.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
errno.workspace = true
num.workspace = true
macaddr.workspace = true

[dependencies.softnpu]
git = "https://github.com/oxidecomputer/softnpu"
branch = "main"
[dependencies.softnpu-client]
git = "https://github.com/oxidecomputer/softnpu"
branch = "main"
