[package]
name = "sidecar-lite"
version = "0.1.0"
edition = "2021"

[lib]
name = "sidecar_lite"
crate_type = ["dylib"]

[dependencies]
p4rs = { git = "https://github.com/oxidecomputer/p4" }
p4-macro = { git = "https://github.com/oxidecomputer/p4" }
num = "0.4"
bitvec = "1.0"
colored = "2.0"
usdt = { git = "https://github.com/oxidecomputer/usdt" }
