[package]
name = "sidecar-lite"
version = "0.1.0"
edition = "2021"

[lib]
name = "sidecar_lite"
crate-type = ["dylib"]

[dependencies]
p4rs.workspace = true
p4-macro.workspace = true
num.workspace = true
bitvec.workspace = true
colored.workspace = true
usdt.workspace = true

[dev-dependencies]
p4-test.workspace = true
anyhow.workspace = true
pnet.workspace = true
pnet_macros.workspace = true
pnet_macros_support.workspace = true
